# AmebaPro2_SDK_v9.0a

./: .gitignore  README.md  release_note.txt
component/at_cmd/: atcmd_bt.c  atcmd_bt.h  atcmd_ethernet.c  atcmd_lwip.c  atcmd_lwip.h  atcmd_sys.c  atcmd_wifi.c  atcmd_wifi.h  log_service.c  log_service.h
component/audio/driver/i2s/: alc5616.c  alc5640.c  alc5651.c  alc5660.c  alc5679.c  alc5680.c  sgtl5000.c
component/bluetooth/driver/hci/: hci_if_rtk.c  hci_if_zephyr.c
component/bluetooth/os/freertos/: osif_freertos.c
component/bluetooth/os/liteos/: osif_liteos.c
component/bluetooth/os/tizenrt/: osif_tizenrt.c
component/bluetooth/rtk_stack/example/: bt_example_entry.c  bt_example_entry.h
component/bluetooth/zephyr_stack/example/: bt_example_entry.c  bt_example_entry.h
component/bluetooth/zephyr_stack/include/: bt_autoconf.h  bt_config.h
component/bluetooth/zephyr_stack/stack/: Kconfig
component/bluetooth/zephyr_stack/temp/: cp_temp.sh
component/example/: example_entry.c
component/example/fatfs/: example_fatfs.c
component/example/httpc/: example_httpc.c  readme.txt
component/example/httpd/: example_httpd.c  readme.txt
component/example/kvs_producer_mmf/: example_kvs_producer_mmf.c  module_kvs_producer.c  module_kvs_producer.h  readme.md  sample_config.h
component/example/kvs_webrtc_mmf/: Common.c  Samples.h  example_kvs_webrtc.h  example_kvs_webrtc_mmf.c  module_kvs_webrtc.c  module_kvs_webrtc.h  readme.md
component/example/media_framework/: example_media_framework.c  example_media_framework.h  example_media_framework_sd_detect.c  example_media_framework_sd_detect.h  mmf2_example_2way_audio_init.c  mmf2_example_2way_audio_opus_init.c  mmf2_example_a_init.c  mmf2_example_a_opus_init.c  mmf2_example_aac_array_rtsp_init.c  mmf2_example_aacloop_init.c  mmf2_example_array_rtknn_init.c  mmf2_example_array_vipnn_init.c  mmf2_example_audioloop_init.c  mmf2_example_file_vipnn_tester.c  mmf2_example_g711loop_init.c  mmf2_example_i2s_audio_init.c  mmf2_example_opusloop_init.c  mmf2_example_param.c  mmf2_example_pcmu_array_rtsp_init.c  mmf2_example_rtp_aad_init.c  mmf2_example_rtp_opusd_init.c  readme.txt
component/example/media_framework/inc/: lwipopts.h
component/example/media_mp4_demuxer/: example_media_mp4_demuxer.c
component/example/media_uvcd/: example_media_uvc.c  example_media_uvcd.c  example_media_uvcd.h  usbd_uvc_parm.c
component/example/sntp_showtime/: example_sntp_showtime.c
component/example/ssl_client/: ssl_client.c  ssl_client_ext.c
component/file_system/fatfs/: fatfs_flash_api.c  fatfs_ramdisk_api.c  fatfs_ramdisk_api.h  fatfs_sdcard_api.c  fatfs_wrap.h
component/file_system/fatfs/r0.14/: diskio.c  ff.c  ff.h  ffconf.h  ffsystem.c  ffunicode.c
component/file_system/ftl/: ftl.c  ftl.h
component/lwip/api/: lwip_netconf.c  lwip_netconf.h  lwipopts.h
component/mbed/hal/: i2c_api.h  rtc_api.h  spi_api.h  timer_api.h  trng_api.h
component/mbed/hal_ext/: audio_api.h  captouch_api.h  dma_api.h  gpio_ex_api.h  i2s_api.h  power_mode_api.h  spi_ex_api.h  sys_api.h  wdt_api.h
component/media/: media_amebacam_broadcast.c
component/media/framework/: hantro_modify_parm.c  jpeg_snapshot.c  sensor_service.c
component/media/mmfv2/: mmf2_dbg.h  mmf2_link.h  mmf2_mimo.h  mmf2_miso.h  mmf2_module.h  mmf2_simo.h  mmf2_siso.h  module_aac.c  module_aad.c  module_array.c  module_array.h  module_audio.c  module_audio.h  module_dup.c  module_fileloader.c  module_fileloader.h  module_filesaver.c  module_filesaver.h  module_g711.c  module_httpfs.c  module_i2s.c  module_mp4.c  module_mp4.h  module_opusc.c  module_opusd.c  module_rtp.c  module_rtsp2.c  module_rtsp2.h  module_uvcd.c  module_video.c  module_video.h  module_vipnn.c  module_vipnn.h
component/media/muxer/: mp4_demuxer.c  mp4_demuxer.h  mp4_muxer.c  mp4_muxer.h  sps_parser.c
component/media/rtp_codec/: avcodec.h
component/network/cJSON/: cJSON.c
component/network/dhcp/: dhcps.c
component/network/httpc/: httpc_tls.c
component/network/httpd/: httpd_tls.c
component/network/iperf/: iperf.c
component/network/mqtt/MQTTClient/: MQTTClient.c  MQTTClient.h  MQTTFreertos.c  MQTTFreertos.h
component/network/mqtt/MQTTPacket/: MQTTConnectClient.c  MQTTDeserializePublish.c  MQTTSubscribeClient.c  MQTTSubscribeServer.c  MQTTUnsubscribeServer.c
component/network/ping/: ping_test.c
component/network/rtsp/: rtsp_api.c
component/network/sntp/: sntp.c  sntp.h
component/network/websocket/: wsclient_tls.c
component/os/freertos/: freertos_cb.c  freertos_heap5_config.c  freertos_pmu.h  freertos_service.c  freertos_service.h
component/os/os_dep/: osdep_service.c  psram_reserve.c
component/os/os_dep/include/: osdep_service.h
component/ssl/mbedtls-2.4.0/: mbedtls_rom_test.c
component/ssl/ssl_func_stubs/: ssl_func_stubs.c
component/ssl/ssl_ram_map/: ssl_ram_map.c
component/stdlib/: platform_stdlib.h  platform_stdlib_rtl8735b.h
component/wifi/api/: wifi_conf.c  wifi_conf.h  wifi_conf_ext.c  wifi_conf_inter.c  wifi_ind.c  wlan_network.c
component/wifi/driver/include/: HalVerDef.h  (+36 more)
component/wifi/promisc/: wifi_conf_promisc.c  wifi_promisc.c
component/wifi/wifi_config/: wifi_simple_config.c
component/wifi/wifi_fast_connect/: wifi_fast_connect.c
doc/: NN_example_README.md  NN_file_tester_README.md
project/realtek_amebapro2_v0_example/GCC-RELEASE/: CMakeLists.txt  Readme.md  amebapro2_bootloader.json  amebapro2_firmware.json  amebapro2_firmware_isp.json  amebapro2_firmware_sns.json  amebapro2_partition.json  config.cmake  includepath.cmake  partition.json  split_binary.py  toolchain.cmake
project/realtek_amebapro2_v0_example/GCC-RELEASE/ROM/GCC/: rtl8735b.ld  rtl8735b_boot.ld  rtl8735b_ns.ld  rtl8735b_ram.ld  rtl8735b_ram_ns.ld  rtl8735b_ram_s.ld  rtl8735b_s.ld
project/realtek_amebapro2_v0_example/GCC-RELEASE/application_ntz/: CMakeLists.txt  libkvs_amazon.cmake  rtl8735b_ram.ld
project/realtek_amebapro2_v0_example/inc/: FreeRTOSConfig.h  build_info.h  platform_opts.h
project/realtek_amebapro2_v0_example/src/: main.c
tools/: .gitattributes  msys64-1210.7z
(+1137 files in other folders)
